<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_text">体脂秤检测</string>
    <string name="app_name">固件升级test</string>
    <string name="btn_qr_scan">扫描二维码</string>
    <string name="btn_scan">扫描</string>
    <string name="btn_scan_stop">停止</string>
    <string name="btn_back">返回</string>
    <string name="btn_setting">设置</string>

    <string name="btn_send">测试</string>
    <string name="btn_connect_device">连接设备</string>
    <string name="btn_disconnect_device">断开连接</string>
    <string name="btn_print_code">打印</string>
    <string name="btn_printer_connect">连接打印机</string>
    <string name="btn_popup_cancel">取   消</string>
    <string name="btn_popup_ok">确   认</string>

    <string name="unknown_device">不知名设备</string>
    <string name="ble_not_supported">设备不支持BLE</string>
    <string name="send_hint">请输入相关指令</string>

    <string name="connect_success">设备连接成功</string>
    <string name="connect_fail">设备连接断开</string>

    <string name="send_edit_toast">请输入发送的内容</string>

    <string name="upload_fail">上传数据失败</string>
    <string name="upload_network_error">网络连接失败</string>

    <string name="print_port_text">port:</string>
    <string name="print_ip">ipAddress:</string>

    <string name="printer_toast_edit">请输入ip address</string>
    <string name="printer_toast_color">请选择颜色</string>
    <string name="print_toast_success">打印成功</string>
    <string name="print_toast_fail">打印失败</string>
    <string name="print_deviceCode_hint">产品版本：</string>

    <string name="network_error">网络问题</string>

    <string name="select_white_text">白色</string>
    <string name="select_black_text">黑色</string>
    <string name="select_red_text">红色</string>
    <string name="select_green_text">绿色</string>
    <string name="select_yellow_text">黄色</string>

    <string name="text_success">测试成功！！！</string>

    <string name="scales_data_text">秤返回数据:</string>
    <string name="connect_status_wait">正在连接请耐心等待，长时间无法连接请返回重新连接...</string>
    <string name="connect_status_success">设备蓝牙连接成功，可测试！</string>
    <string name="connect_status_fail">设备连接失败或断开,请返回重新连接！</string>
    <string name="print_no_bitmap">二维码未生成不可打印，请稍后重试...</string>

    <string name="device_code_text">设备代码</string>

    <string name="update_title">固件升级</string>
    <string name="update_connect_wait">正在连接蓝牙...</string>
    <string name="update_connect_fail">蓝牙连接断开</string>
    <string name="update_connect_success">蓝牙连接成功，等待升级...</string>




</resources>
