<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/connection_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <RelativeLayout
        android:id="@+id/connection_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main_title_ground">

        <Button
            android:id="@+id/connection_back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_height"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_share"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/btn_back"
            android:textColor="#ffffff" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/mProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/connect_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/connection_title"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#ffff2821"
        android:textSize="20sp"
        android:text="@string/connect_status_wait"
        />

    <TextView
        android:id="@+id/scales_data_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/connect_status"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:textColor="#000000"
        android:text="@string/scales_data_text"
        />
    <TextView
        android:id="@+id/get_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scales_data_text"
        android:layout_margin="10dp"
        android:textColor="#ff120e14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <!--<Button-->
            <!--android:id="@+id/send_btn"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:layout_marginRight="5dp"-->
            <!--android:background="@drawable/button_share"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/btn_send"-->
            <!--android:textColor="#ffffff"-->
            <!--android:textSize="20sp" />-->

        <EditText
            android:id="@+id/order_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="#000000"
            />

        <Button
            android:id="@+id/send_btn"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_share"
            android:text="@string/btn_send"
            />
    </LinearLayout>

</RelativeLayout>